Bugfix: credits container horizontally aligned whild display of nested elements are table-cell

--- a/module/Application/sass/_layout-landing.scss
+++ b/module/Application/sass/_layout-landing.scss
@@ -40,6 +40,7 @@ footer {
 
   .credits-container {
 
+    margin: 0 auto;
     position: relative;
     padding-bottom: 10px;
 
